@@ -1,0 +1,7 @@
+{
+  "values": [
+    "rftoolsbase:dimensionalshard_overworld",
+    "rftoolsbase:dimensionalshard_nether",
+    "rftoolsbase:dimensionalshard_end"
+  ]
+}
